# yyg-gamejam-2019

./: .gitignore  README.md
assets/: font.pyxel  marbles.pyxel  trex.pyxel
client/: client.yyp
client/extensions/emu_logic/: emu_logic.yy
client/objects/obj_circle/: Step_0.gml  obj_circle.yy
client/objects/obj_cross/: Step_0.gml  obj_cross.yy
client/objects/obj_device/: Create_0.gml  Destroy_0.gml  Draw_0.gml  Other_10.gml  Other_11.gml  Step_0.gml  obj_device.yy
client/objects/obj_down/: Mouse_4.gml  Step_0.gml  obj_down.yy
client/objects/obj_left/: Mouse_7.gml  Step_0.gml  obj_left.yy
client/objects/obj_reset/: Step_0.gml  (+1 more)
client/views/: 092e84ac-a654-4d06-a2bc-85a8c9bcb196.yy  0ad7603f-58ee-4a96-9f2f-95f21ec25485.yy  0f085346-a16f-4680-9b92-2fe3eaf0ed34.yy  13f6dcb6-4fc2-4c07-87d4-d7abc9a3ccc5.yy  3772dcb2-7b9b-44d4-88a5-99696b2a08c8.yy  3864b1ef-f3af-4570-bfb5-b186a03ba47f.yy  40e05874-b6c5-4fd2-a63a-12191e783aa2.yy  529c7b93-4e6e-46b2-b3fd-01c86ce5c5fc.yy  59bbb486-2792-4274-9a18-a8707fb85856.yy  68c4f3a5-1669-4bbf-b555-512b8b00e2eb.yy  7a7313e3-7d8f-4204-adf7-9c43b6d2749a.yy  819df337-bba4-4848-8024-bc06257c4b0b.yy  8b8e3bbb-5c7e-4d72-848c-11cdea12fbb2.yy  c9bdacb4-78d1-466a-b562-e3a65400a066.yy  d160998a-1121-4bdf-8269-a805d5edd632.yy  ee44631a-049a-49e5-a119-b7136ef53aee.yy
emu-logic/: .gitignore  Cargo.toml
emu-logic/resources/: main.kj  manifest.json
emu-logic/src/: cartridge_manifest.rs  cpu.rs  fs_module_loader.rs  lib.rs  opsdesc.txt
roms/marbles/: main.kj  manifest.json  sprite-info.txt
roms/t-rex run/: main.kj  manifest.json
(+29 files in other folders)
